cps/static/css/style.css
/* ... */
.cwa_stats_header {
  font-size: 1.5em;
  font-weight: bold;
  margin-bottom: 10px;
  color: #333333;
}

.cwa_stats_value {
  font-size: 2.5em;
  font-weight: bold;
  color: #45b29d;
}

/* Media Query for Medium Screens */
@media (max-width: 1024px) {
  .cwa_stats_container {
    grid-template-columns: repeat(
      2,
      1fr
    ); /* 2 equal columns on medium screens */
  }
}

/* Media Query for Mobile Screens or Thin Windows */
@media (max-width: 480px) {
  .cwa_stats_container {
    grid-template-columns: 1fr; /* 1 column, 4 sections stacked vertically */
  }
}

.stats_see_more_btn {
  border-radius: 6px !important;
  margin-bottom: 0px !important;
}

.refresh-cwa {
  width: -webkit-fill-available;
  justify-content: space-evenly;
}

